--- a/Keras_CNN_CIFAR.ipynb
+++ b/Keras_CNN_CIFAR.ipynb
@@ -10,13 +10,10 @@
     "import sys\n",
     "import numpy as np\n",
     "import keras as K\n",
-    "import pickle\n",
-    "import tarfile\n",
-    "from urllib.request import urlretrieve\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D, Dropout\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from dataloader import load_cifar"
    ]
   },
   {
@@ -54,78 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_batch(src):\n",
-    "    '''Unpack the pickle files'''\n",
-    "    with open(src, 'rb') as f:\n",
-    "        if sys.version_info.major == 2:\n",
-    "            data = pickle.load(f)\n",
-    "        else:\n",
-    "            data = pickle.load(f, encoding='latin1') # Contains the numpy array\n",
-    "    return data\n",
-    "\n",
-    "def process_cifar():\n",
-    "    '''Read data into RAM'''\n",
-    "    print('Preparing train set...')\n",
-    "    train_list = [read_batch('./cifar-10-batches-py/data_batch_{0}'.format(i + 1)) for i in range(5)]\n",
-    "    x_train = np.concatenate([x['data'] for x in train_list])\n",
-    "    y_train = np.concatenate([y['labels'] for y in train_list])\n",
-    "    print('Preparing test set...')\n",
-    "    tst = read_batch('./cifar-10-batches-py/test_batch')\n",
-    "    x_test = tst['data']\n",
-    "    y_test = np.asarray(tst['labels'])\n",
-    "    return x_train, x_test, y_train, y_test\n",
-    "\n",
-    "def maybe_download_cifar(src=\"http://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\"):\n",
-    "    '''Load the training and testing data'''\n",
-    "    try:\n",
-    "        return process_cifar()\n",
-    "    except:\n",
-    "        # Catch the exception that file doesn't exist & Download\n",
-    "        print('Data does not exist. Downloading ' + src)\n",
-    "        filename = src.split('/')[-1]\n",
-    "        filepath = os.path.join(\"./\",filename)\n",
-    "        def _recall_func(num,block_size,total_size):\n",
-    "            sys.stdout.write('\\r>> downloading %s %.1f%%' % (filename,float(num*block_size)/float(total_size)*100.0))\n",
-    "            sys.stdout.flush()\n",
-    "        fname, h = urlretrieve(src, filepath,_recall_func)\n",
-    "        file_info = os.stat(filepath)\n",
-    "        print('Successfully download.',filename,file_info.st_size,'bytes')\n",
-    "        print('Extracting files...')\n",
-    "        with tarfile.open(fname) as tar:\n",
-    "            tar.extractall()\n",
-    "        os.remove(fname)\n",
-    "        return process_cifar()\n",
-    "    \n",
-    "def cifar_for_library(channel_first=True, one_hot=False):\n",
-    "    # Raw data\n",
-    "    x_train, x_test, y_train, y_test = maybe_download_cifar()\n",
-    "    # Scale pixel intensity\n",
-    "    x_train = x_train / 255.0\n",
-    "    x_test = x_test / 255.0\n",
-    "    # Reshape\n",
-    "    x_train = x_train.reshape(-1, 3, 32, 32)\n",
-    "    x_test = x_test.reshape(-1, 3, 32, 32)\n",
-    "    # Channel last\n",
-    "    if not channel_first:\n",
-    "        x_train = np.swapaxes(x_train, 1, 3)\n",
-    "        x_test = np.swapaxes(x_test, 1, 3)\n",
-    "    # One-hot encode y\n",
-    "    if one_hot:\n",
-    "        y_train = np.expand_dims(y_train, axis=-1)\n",
-    "        y_test = np.expand_dims(y_test, axis=-1)\n",
-    "        enc = OneHotEncoder(categorical_features='all')\n",
-    "        fit = enc.fit(y_train)\n",
-    "        y_train = fit.transform(y_train).toarray()\n",
-    "        y_test = fit.transform(y_test).toarray()\n",
-    "    # dtypes\n",
-    "    x_train = x_train.astype(np.float32)\n",
-    "    x_test = x_test.astype(np.float32)\n",
-    "    y_train = y_train.astype(np.int32)\n",
-    "    y_test = y_test.astype(np.int32)\n",
-    "    return x_train, x_test, y_train, y_test\n",
-    "\n",
-    "# Data into format for library\n",
-    "x_train, x_test, y_train, y_test = cifar_for_library(channel_first=True, one_hot=True)\n",
+    "x_train, x_test, y_train, y_test = load_cifar(channel_first=True, one_hot=True)\n",
     "print(x_train.shape, x_test.shape, y_train.shape, y_test.shape)\n",
     "print(x_train.dtype, x_test.dtype, y_train.dtype, y_test.dtype)"
    ]
